fixed logo overflow rule

--- a/_organisms.scss
+++ b/_organisms.scss
@@ -60,6 +60,7 @@
     background-repeat: no-repeat;
     background-position: right;
     background-size: 25%;
+    overflow: overlay;
   }
 }
 
